--- a/www/styl/screen.styl
+++ b/www/styl/screen.styl
@@ -1,8 +1,9 @@
 @import colors
 @import prefixes
 @import 'components/triangle'
-
+@import fitter
+@import columns
 .ig
   @import basics
-.ig
-  background yellow
+// .ig
+
