--- a/www/styl/columns.styl
+++ b/www/styl/columns.styl
@@ -2,10 +2,11 @@
   width 100%
   float left
   .col
-    width ((1000px - 90px) / 4)
     padding 0px 15px
     float left
     &:first-child
       padding-left 0px
     &:last-child
       padding-right 0px
+    div
+      width ((1000px - 90px) / 4)
