nakresleny zakladni cary k 90 letum v Rusku

--- a/www/styl/colors.styl
+++ b/www/styl/colors.styl
@@ -14,6 +14,9 @@ ColorRed = #ab0000
 ColorBlue = #003366
 ColorGrey  = #eee
 
+RussianRed = #D52B1E
+RussianBlue = #0039A6
+
 PartyKSCM = #e3001a
 PartyCSSD = #f29400
 PartyODS  = #006ab3
