pridana x osa k caram

--- a/www/styl/Lines.styl
+++ b/www/styl/Lines.styl
@@ -12,3 +12,13 @@
         stroke RussianBlue
         fill white
         stroke-width 1px
+      g.axis
+        line.yExtent
+        line.mark
+          stroke #d
+          shape-rendering crispEdges
+        text
+          font-size 11px
+          fill #7
+
+
