--- a/www/styl/Lines.styl
+++ b/www/styl/Lines.styl
@@ -13,7 +13,7 @@
         fill white
         stroke-width 1px
       g.axis
-        line.yExtent
+        line.extent
         line.mark
           stroke #d
           shape-rendering crispEdges
