--- a/www/styl/Lines.styl
+++ b/www/styl/Lines.styl
@@ -24,5 +24,8 @@
         text
           font-size 11px
           fill darken(RussianBlue, 50%)
-
-
+  .col.no-heading
+    h2
+      display none
+    svg
+      margin-top 20px
