--- a/www/styl/Lines.styl
+++ b/www/styl/Lines.styl
@@ -29,3 +29,16 @@
       display none
     svg
       margin-top 20px
+  .col.other-color
+    svg
+      circle
+        stroke RussianRed
+        &.significant
+          fill RussianRed
+      path
+        stroke RussianRed
+      g.axis
+        line.mark.significant
+          stroke RussianRed
+        text
+          fill darken(RussianRed, 50%)
