opraveny umrti na externi priciny - pridany sebevrazdy a valky, mensi graficke upravy

--- a/www/styl/Lines.styl
+++ b/www/styl/Lines.styl
@@ -42,3 +42,7 @@
           stroke RussianRed
         text
           fill darken(RussianRed, 50%)
+  &.lines-russia-czech
+    .col:nth-child(7)
+      g.axis.y text:last-of-type
+        display none
