integrace do inpage, fix paddingu col-layoutu

--- a/www/styl/Lines.styl
+++ b/www/styl/Lines.styl
@@ -1,8 +1,9 @@
 &.lines
+  margin-bottom 38px
   .line
     h2
-      font-size 18px
-      font-weight 400
+      font-size 18px !important
+      font-weight 400 !important
     svg
       path
         fill none
