--- a/www/styl/Lines.styl
+++ b/www/styl/Lines.styl
@@ -78,6 +78,7 @@
       opacity 1
 
   &.lines-russia-czech
-    .col:nth-child(7)
+    .col:nth-child(6)
       g.axis.y text:nth-of-type(3)
+      g.axis.y text:nth-of-type(4)
         display none
