zarovnani na levou osu Line grafu

--- a/www/styl/Lines.styl
+++ b/www/styl/Lines.styl
@@ -4,6 +4,8 @@
     h2
       font-size 18px !important
       font-weight 400 !important
+      margin-left 40px
+      white-space nowrap
     svg
       path
         fill none
