--- a/www/styl/Priruskty.styl
+++ b/www/styl/Priruskty.styl
@@ -1,4 +1,11 @@
 &.prirustky
+  .col:nth-child(2)
+  .col:nth-child(3)
+  .col:nth-child(4)
+    > div
+      width ((1000px - 90px) / 4 - (marginLeft / 3))
+      padding-left marginLeft
+
   svg
     circle.point
       fill #d73027
