--- a/www/styl/fitter.styl
+++ b/www/styl/fitter.styl
@@ -43,7 +43,7 @@ overlayTextColor = white
   > p
   > ul
     width 485px
-    margin-left 258px
+    margin-left (258px + marginLeft)
     float left
     margin-right 0px
   > ul
