prirustky - pridany nejvyznamnejsi mensiny

--- a/www/styl/Priruskty.styl
+++ b/www/styl/Priruskty.styl
@@ -1,4 +1,9 @@
 &.prirustky
+  .col
+    h3
+      margin-bottom 4px
+    p
+      font-size 12px
   .col:nth-child(2)
   .col:nth-child(3)
   .col:nth-child(4)
