--- a/www/styl/screen.styl
+++ b/www/styl/screen.styl
@@ -11,3 +11,14 @@ marginLeft = 38px
   @import Strom
   @import Naklady
 
+.ig .col
+  h2
+    font-size 16px
+    white-space nowrap
+    margin 0px
+  h3
+    margin 0px
+    font-size 12px
+    font-weight normal
+    white-space nowrap
+    color #6
