--- a/www/styl/Naklady.styl
+++ b/www/styl/Naklady.styl
@@ -13,6 +13,9 @@
           stroke #f0
           stroke-width 4
           shape-rendering crispEdges
+        text
+          font-weight bold
+          font-size 15px
       g.line
         transition opacity 0.1s
         path
@@ -62,6 +65,7 @@
       position absolute
       z-index 1
       left (227px * 3 + 15px * 6 + marginLeft)
+      margin-top -8px
       width (227px - marginLeft)
       opacity 1
       transition opacity 0.1s
