--- a/www/styl/Lines.styl
+++ b/www/styl/Lines.styl
@@ -1,11 +1,13 @@
 &.lines
   margin-bottom 38px
   .line
-    h2
-      font-size 18px !important
-      font-weight 400 !important
-      margin-left 40px
+    h3
+      margin-left 38px
       white-space nowrap
+    h4
+      margin-bottom 12px
+      margin-left 38px
+      font-weight normal
     svg
       path
         fill none
@@ -33,7 +35,8 @@
           font-size 11px
           fill darken(RussianBlue, 50%)
   .col.no-heading
-    h2
+    h3
+    h4
       display none
     svg
       margin-top 20px
