--- a/www/styl/Priruskty.styl
+++ b/www/styl/Priruskty.styl
@@ -1,7 +1,8 @@
 &.prirustky
   .col
-    h3
+    h4
       margin-bottom 4px
+      font-weight normal
     p
       font-size 12px
   .col:nth-child(2)
