linecharty - pridany popisky zemi

--- a/www/styl/Lines.styl
+++ b/www/styl/Lines.styl
@@ -5,9 +5,14 @@
       margin-left 38px
       white-space nowrap
     h4
-      margin-bottom 12px
+    h5
       margin-left 38px
       font-weight normal
+    h5
+      font-size 12px
+      margin-top 9px
+      margin-bottom 3px
+      color darken(RussianBlue, 20%)
     svg
       path
         fill none
@@ -38,12 +43,14 @@
     h3
     h4
       display none
-    svg
+    h5
       margin-top 20px
   g.active-lines line.active
     shape-rendering crispEdges
     stroke lighten(desaturate(RussianBlue, 40%), 40%)
   .col.other-color
+    h5
+      color darken(RussianRed, 20%)
     svg
       circle
         stroke RussianRed
