--- a/www/styl/fitter.styl
+++ b/www/styl/fitter.styl
@@ -22,10 +22,11 @@ overlayTextColor = white
     position absolute
     margin-left 50px !important
     text-align right
+    z-index 40
   p.perex
     position absolute
     top 177px
-    padding-left 600px
+    left 600px
     width (950px - 600px)
     font-weight 100
     text-align left
@@ -34,6 +35,7 @@ overlayTextColor = white
     color overlayTextColor
     text-shadow 0px 0px 10px #0
     margin 0px
+    z-index 40
   > p
   > ul > li
     line-height 1.9em
@@ -121,6 +123,7 @@ overlayTextColor = white
   width 100%
   height 600px
 div.hero
+  z-index 10
   font-family 'Roboto', arial, helvetica,sans-serif
   position absolute
   top 126px
@@ -130,6 +133,7 @@ div.hero
   background #6 url('https://samizdat.cz/data/zelen-mesta-www/www/img/cover.jpg') no-repeat center top
   background-size cover
   .overlay
+    z-index 10
     position absolute
     top 0px
     left 0px
@@ -142,7 +146,7 @@ div.hero
     position absolute
     bottom 10px
     right 10px
-    z-index 2
+    z-index 50
     text-shadow 0px 0px 10px #0
     font-weight 200
     a
@@ -151,7 +155,7 @@ div.hero
       &:hover
         text-decoration none
   a.scroll-btn
-    z-index 2
+    z-index 50
     position absolute
     top 360px
     left 50%
@@ -193,12 +197,6 @@ div.hero
     bottom 0px
     left 90px
     height 60px
-    z-index 3
-    &.fixed
-      position fixed
-      top 0px
-    &:hover
-      opacity 1
     a
       display block
       float left
@@ -206,6 +204,7 @@ div.hero
       height @width
       position relative
       transition background 0.2s
+      z-index 50
       img
         max-height (@height - 28px)
         max-width (@height - 20px)
@@ -219,6 +218,7 @@ div.hero
         transition opacity 0.2s
       &:hover
         img
+          transform translate(-50%,-50%) // bug in Chrome?
           opacity 0.9
       &.fb
         background #3F67C0
@@ -228,6 +228,21 @@ div.hero
         background #35B5EB
         &:hover
           background darken(#35B5EB, 20%)
+      &.cro
+        z-index 9
+        background #ED2D38
+        border-right 3px solid darken(#ED2D38, 30%)
+        margin-right 6px
+        &:hover
+          background darken(#ED2D38, 20%)
+    &.fixed a
+      position fixed
+      top 0px
+      left 90px
+      &:nth-child(2)
+        left 159px
+      &:nth-child(3)
+        left 219px
 
 .web-zpravy
   background white url('https://samizdat.cz/tools/cro-parts/bg.png')  repeat-x !important
