pridana overlayova fotka

--- a/www/styl/fitter.styl
+++ b/www/styl/fitter.styl
@@ -130,7 +130,7 @@ div.hero
   bottom 0px
   width 100%
   min-width 1000px
-  background #6 url('https://samizdat.cz/data/zelen-mesta-www/www/img/cover.jpg') no-repeat center top
+  background #6 url('https://samizdat.cz/data/ruska-demografie/www/img/cover.jpg') no-repeat center bottom
   background-size cover
   .overlay
     z-index 10
@@ -139,7 +139,7 @@ div.hero
     left 0px
     bottom 0px
     width 100%
-    background linear-gradient(to top, rgba(0,0,0,1) 0%, rgba(0,0,0,0.5) 25%);
+    background linear-gradient(to top, rgba(0,0,0,1) 0%, rgba(0,0,0,0.3) 25%);
     position absolute
   span.copy
     color overlayTextColor
@@ -157,7 +157,7 @@ div.hero
   a.scroll-btn
     z-index 50
     position absolute
-    top 360px
+    top 421px
     left 50%
     margin-left (250px + -476px)
     text-transform uppercase
