hlavicka - text, radkovani a pozice next-buttonu

--- a/www/styl/fitter.styl
+++ b/www/styl/fitter.styl
@@ -20,7 +20,7 @@ overlayTextColor = white
     color overlayTextColor
     text-shadow 0px 0px 10px #0
     position absolute
-    margin-left 50px !important
+    margin-left 100px !important
     text-align right
     z-index 40
   p.perex
@@ -156,9 +156,9 @@ div.hero
   a.scroll-btn
     z-index 50
     position absolute
-    top 421px
+    top 482px
     left 50%
-    margin-left (250px + -476px)
+    margin-left 97px
     text-transform uppercase
     color overlayTextColor
     font-weight 200
