lines - odstraneny prekryvajici se popisky

--- a/www/styl/Lines.styl
+++ b/www/styl/Lines.styl
@@ -94,3 +94,30 @@
       g.axis.y text:nth-of-type(3)
       g.axis.y text:nth-of-type(4)
         display none
+    .col:nth-child(8)
+      g.axis.y text:nth-of-type(3)
+        display none
+  &.lines-russia-czech-2
+    .col:nth-child(4)
+      g.axis.y text:nth-of-type(3)
+      g.axis.y text:nth-of-type(4)
+        display none
+    .col:nth-child(6)
+      g.axis.y text:nth-of-type(2)
+        display none
+  &.line-external-deaths
+    .col:nth-child(5)
+    .col:nth-child(9)
+      g.axis.y text:nth-of-type(3)
+        display none
+    .col:nth-child(7)
+    .col:nth-child(12)
+      g.axis.y text:nth-of-type(3)
+      g.axis.y text:nth-of-type(4)
+        display none
+    .col:nth-child(11)
+      g.axis.y text:nth-of-type(2)
+      g.axis.y text:nth-of-type(3)
+      g.axis.y text:nth-of-type(4)
+        display none
+
