strom - pridany popisky nejstarsi-nejmladsi, upraven margin

--- a/www/styl/Strom.styl
+++ b/www/styl/Strom.styl
@@ -1,6 +1,8 @@
 &.strom
   float left
   width 100%
+  margin-top 30px
+  margin-bottom 48px
   .tree
     width 485px
     margin-left (258px + marginLeft)
