naklady - pridany nakupy automobilu

--- a/www/styl/Naklady.styl
+++ b/www/styl/Naklady.styl
@@ -56,6 +56,11 @@
             stroke #a65628
           circle
            fill #a65628
+        &:nth-child(7)
+          path, line
+            stroke #f781bf
+          circle
+           fill #f781bf
       g.label
         text
           opacity 0
