hero - zvyrazneni popisku "stesti je za horami"

--- a/www/styl/fitter.styl
+++ b/www/styl/fitter.styl
@@ -148,6 +148,12 @@ div.hero
     z-index 50
     text-shadow 0px 0px 10px #0
     font-weight 200
+    line-height 23px
+    text-align right
+    em
+      font-style normal
+      font-weight bold
+      font-size 17px
     a
       color overlayTextColor
       text-decoration underline
