--- a/www/styl/Lines.styl
+++ b/www/styl/Lines.styl
@@ -113,7 +113,6 @@
       g.axis.y text:nth-of-type(3)
         display none
     .col:nth-child(7)
-    .col:nth-child(12)
       g.axis.y text:nth-of-type(3)
       g.axis.y text:nth-of-type(4)
         display none
@@ -122,4 +121,8 @@
       g.axis.y text:nth-of-type(3)
       g.axis.y text:nth-of-type(4)
         display none
-
+    .col:nth-child(8)
+    .col:nth-child(12)
+      g.axis.y text:nth-of-type(2)
+      g.axis.y text:nth-of-type(3)
+        display none
