--- a/www/styl/Strom.styl
+++ b/www/styl/Strom.styl
@@ -37,9 +37,8 @@
           opacity 0.2
     .popisek
       position absolute
-      &:nth-of-type(1)
-      &:nth-of-type(2)
-        font-style italic
+      &:nth-of-type(6)
+        font-weight bold
       &.left
         left (-227px - 30px)
         width 227px
