--- a/www/styl/fitter.styl
+++ b/www/styl/fitter.styl
@@ -150,10 +150,16 @@ div.hero
     font-weight 200
     line-height 23px
     text-align right
-    em
+    width 600px
+    .title
       font-style normal
-      font-weight bold
-      font-size 17px
+      font-weight 100
+      display block
+      margin-bottom 4px
+      em
+        font-size 16px
+        font-weight 300
+        font-style normal
     a
       color overlayTextColor
       text-decoration underline
