sync s redesignem RS

--- a/www/styl/fitter.styl
+++ b/www/styl/fitter.styl
@@ -255,8 +255,22 @@ div.hero
     &:nth-child(3)
       left 219px
 
+body.web-zpravy.theme-trestnecinypolitiku
+body.web-zpravy.theme-domaci
+body.web-zpravy.theme-regiony
+body.web-zpravy.theme-evropskaunie
+body.web-zpravy.theme-data
+body.web-zpravy.theme-sochi2014
+body.web-zpravy.theme-sochi2014_data
+body.web-zpravy.theme-volby2012_eurodotace
+body.web-zpravy.theme-ep2014
+body.web-zpravy.theme-ep2014_vizitky
+body.web-zpravy.theme-ep2014_vysledky
+body.web-zpravy.theme-ep2014_rozhovory
+body.web-zpravy.theme-krym2014
+  background url('https://samizdat.cz/tools/cro-parts/dekretenizer-bg.png') top repeat-x !important
+
 .web-zpravy
-  background white url('https://samizdat.cz/tools/cro-parts/bg.png')  repeat-x !important
   #nav-sub
     background-image none
     .sub
