pridan styl zdroju dat

--- a/www/styl/fitter.styl
+++ b/www/styl/fitter.styl
@@ -113,6 +113,11 @@ overlayTextColor = white
     margin 20px 0px
     position relative
     left -450px
+  p:last-of-type
+    margin-top 50px
+    border-top 1px solid #a
+    padding-top 20px
+    font-size 14px
 
 .author
   margin-top 60px !important
@@ -268,9 +273,10 @@ body.web-zpravy.theme-ep2014_vizitky
 body.web-zpravy.theme-ep2014_vysledky
 body.web-zpravy.theme-ep2014_rozhovory
 body.web-zpravy.theme-krym2014
-  background url('https://samizdat.cz/tools/cro-parts/dekretenizer-bg.png') top repeat-x !important
+  background white url('https://samizdat.cz/tools/cro-parts/dekretenizer-bg.png') top repeat-x !important
 
 .web-zpravy
+  background-color #FFF !important
   #nav-sub
     background-image none
     .sub
