--- a/www/styl/fitter.styl
+++ b/www/styl/fitter.styl
@@ -113,7 +113,7 @@ overlayTextColor = white
     margin 20px 0px
     position relative
     left -450px
-  p:last-of-type
+  > p:last-of-type
     margin-top 50px
     border-top 1px solid #a
     padding-top 20px
